--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Title -->
-    <h1 class="title">Licit nr. 1</h1>
+    <h1 class="title">{{auction.name}}</h1>
 
     <!-- Licit price and buttons -->
     <div class="licit-ui">
