Set price with websockets
For broadcasting functionality I used socket.io, which is an abstraction over the
vanilla websocket package. With socket.io websocket messages can be
broadcasted.
This commit makes the backend code hacky, so it needs to be refactored.

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -15,7 +15,7 @@
 
     <!-- Licit price and buttons -->
     <div class="licit-ui">
-      <h2 class="price">${{ auction.price }}</h2>
+      <h2 class="price">{{ auction.price }}</h2>
       <div class="licit-button-group">
         <p class="licit-amount">{{ auction.licit }}</p>
         <button class="licit-button" (click)="makeLicit()">Licitalok</button>
