Put licit buttons to right

--- a/app/src/app/app.component.css
+++ b/app/src/app/app.component.css
@@ -43,6 +43,10 @@
 	margin-right: auto;
 }
 
+.licit-button-group{
+	float: right;
+}
+
 .video-view .video .licit-amount {
 	border: 1px dashed black;
 	width: 100%;
