Change app-current-bid tag to app-highest-bid tag

--- a/app/src/app/licit/licit.component.html
+++ b/app/src/app/licit/licit.component.html
@@ -7,7 +7,7 @@
         </video>
         <div class="video-content">
             <div class="licit-ui">
-                <app-current-bid></app-current-bid>
+                <app-highest-bid></app-highest-bid>
                 <div class="licit-button-group">
                     <app-raise-bid></app-raise-bid>
                     <app-licit-buttons></app-licit-buttons>
