--- a/app/src/app/licit/timer/timer.component.html
+++ b/app/src/app/licit/timer/timer.component.html
@@ -1,5 +1,5 @@
 <div class="timer">
-    <p>12</p>
+    <p>{{ minute | number:'2.0-0' }}</p>
     <p>:</p>
-    <p>50</p>
+    <p>{{ second | number:'2.0-0' }}</p>
 </div>
