Made activity overlay and fixed UI

--- a/app/src/app/licit/highest-bid/highest-bid.component.css
+++ b/app/src/app/licit/highest-bid/highest-bid.component.css
@@ -1,5 +1,8 @@
 .price {
 	text-align: center;
-    background-color: aquamarine;
-    opacity: 0.6;
+    color: black;
+    border: 1px dashed black;
+    width: fit-content;
+    margin: auto;
+    margin-top: 20px;
 }
