--- a/app/src/app/licit/licit-buttons/licit-buttons.component.html
+++ b/app/src/app/licit/licit-buttons/licit-buttons.component.html
@@ -1,5 +1,5 @@
 <button class="licit-button" (click)="makeLicit()">Make bid</button>
 <div class="licit-change-group">
-    <button (click)="increase()">+</button>
-    <button (click)="decrease()">-</button>
+    <button id="plus" (click)="increase()">+</button>
+    <button id="minus" (click)="decrease()">-</button>
 </div>
