--- a/app/src/app/licit/timer/timer.component.css
+++ b/app/src/app/licit/timer/timer.component.css
@@ -4,4 +4,11 @@
 	max-width: fit-content;
 	padding: 0.2rem;
 	line-height: 0.2rem;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+}
+
+.timer p{
+	font-size: x-large;
 }
