--- a/app/src/app/licit/user-activities/user-activities.component.html
+++ b/app/src/app/licit/user-activities/user-activities.component.html
@@ -1,6 +1,8 @@
-<div id="licit_window" class="user-activites">
-    <h2>User Activities</h2>
-    <div id="event" *ngFor="let event of licitEvents">
-    <p>{{ event }}</p>
+<div class="div-relative">
+    <div id="licit_window" class="user-activites">
+        <h2>User Activities</h2>
+        <div id="event" *ngFor="let event of licitEvents">
+        <p>{{ event }}</p>
+        </div>
     </div>
 </div>
