--- a/app/src/app/licit/highest-bid/highest-bid.component.css
+++ b/app/src/app/licit/highest-bid/highest-bid.component.css
@@ -2,7 +2,9 @@
 	text-align: center;
     color: black;
     border: 1px dashed black;
+    border-radius: 25px;
     width: fit-content;
     margin: auto;
     margin-top: 20px;
+    padding: 10px;
 }
