--- a/app/src/app/licit/licit-name/licit-name.component.css
+++ b/app/src/app/licit/licit-name/licit-name.component.css
@@ -2,5 +2,6 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: fit-content;
-	margin-top: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
