--- a/app/src/app/licit/user-activities/user-activities.component.css
+++ b/app/src/app/licit/user-activities/user-activities.component.css
@@ -1,10 +1,11 @@
 .div-relative{
 	position: relative;
-	height: 520px;
+	height: 530px;
 }
 
 .user-activites {
-	border: 1px solid black;
+	border: 1px dashed black;
+	border-radius: 25px;
 	width: 50%;
     height: 10rem;
     margin-left: 450px;
@@ -19,6 +20,13 @@
 #licit_window {
 	overflow-y: scroll;
 	background-color: rgba(128, 128, 128, 0.26);
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+#licit_window::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space (Safari and Chrome) */
+    background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
 #licit_window h2{
