Login page design

--- a/app/src/app/login/login.component.css
+++ b/app/src/app/login/login.component.css
@@ -1,15 +1,75 @@
+h1 {
+	font-size: 50px;
+	margin: 10px;
+	margin-bottom: 60px;
+	text-align: center;
+}
+
 .frame {
 	display: flex;
+	height: 70vh;
 	justify-content: center;
+	align-items: center;
+	font-family: 'Lato', sans-serif;
+	flex-direction: column;
+}
+
+.input-field {
+	display: flex;
+	align-items: center;
+	margin: 10px;
 }
 
 label {
+	margin-bottom: 10px;
+	margin-top: 10px;
 	margin-right: 10px;
+	font-size: 20px;
 }
 
 button {
-	margin-top: 10px;
+	margin-top: 20px;
 	padding: 10px;
+	padding-left: 20px;
+	width: 130px;
+	background-color: #164f91;
+	background-image: linear-gradient(to right, #1c5da8, #133866);
+	border: none;
+	color: white;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: all 0.5s;
+	transition-duration: 5s;
+}
+
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+button span:after {
+  content: '👉';
+  position: absolute;
+  opacity: 0;
+  top: -5px;
+  right: -20px;
+  transition: 0.5s;
+}
+
+button:hover span {
+  padding-right: 25px;
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 .error {
@@ -18,7 +78,18 @@ button {
 	margin-bottom: 0px;
 }
 
-.button-group {
-	display: flex;
-	justify-content: center;
+input[type=text] {
+	width: 300px;
+	padding: 8px 8px;
+	margin: 3px 0;
+	box-sizing: border-box;
+	border: 3px solid #164f9162;
+	border-radius: 6px;
+	transition: 0.5s;
+	font-size: 16px;
+	outline: none;
+}
+
+input[type=text]:focus {
+	border: 3px solid #164f91;
 }
