--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -1,14 +1,12 @@
 <div class="frame">
-	<div>
-		<h1>Auction Portal</h1>
-		<div>
-			<label for="username" >Username</label>
-			<input id="username" type="text" (keyup)="onKey($event)" />
-			<p class="error" *ngIf="error == 'wrong-username' ">The username is taken! Choose another one</p>
-			<p class="error" *ngIf="error == 'no-username' ">Choose an username.</p>
-		</div>
-		<div class="button-group">
-			<button (click)="onLogin()">Join</button>
-		</div>
+	<h1>Plan B Auction Portal</h1>
+	<div class="input-field">
+		<label for="username" >Username:</label>
+		<input id="username" type="text" placeholder="Unique username" (keyup)="onKey($event)" />
+	</div>
+	<p class="error" *ngIf="error == 'wrong-username' ">This username is taken. Please choose another one</p>
+	<p class="error" *ngIf="error == 'no-username' ">Please choose a username to enter</p>
+	<div class="button-group">
+		<button (click)="onLogin()"><span>Log In </span></button>
 	</div>
 </div>
