--- a/app/src/app/licit/licit.component.html
+++ b/app/src/app/licit/licit.component.html
@@ -1,9 +1,7 @@
 <div class="layout">
     <app-licit-name></app-licit-name>
     <div class="video-view">
-        <video class="video" id="videoPlayer" width="100%" height="100%" controls muted autoplay>
-            <source src="/video" type="video/mp4" />
-        </video>
+        <img style="-webkit-user-select: none;" class="video" id="videoPlayer" src="http://agiliscucc.ddns.net:56000/mjpeg" width="100%" height="100%">
         <div class="video-content">
             <app-timer></app-timer>
             <div class="licit-ui">
