--- a/app/src/app/licit/licit-buttons/licit-buttons.component.html
+++ b/app/src/app/licit/licit-buttons/licit-buttons.component.html
@@ -1,5 +1,7 @@
-<button class="licit-button" (click)="makeLicit()">Make bid</button>
-<div class="licit-change-group">
+<div class="buttons">
+    <button class="licit-button" (click)="makeLicit()">
+        <span>Make bid </span>
+    </button>
     <button id="plus" (click)="increase()">+</button>
     <button id="minus" (click)="decrease()">-</button>
 </div>
