--- a/app/src/app/licit/licit-name/licit-name.component.css
+++ b/app/src/app/licit/licit-name/licit-name.component.css
@@ -4,4 +4,8 @@
 	max-width: fit-content;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	border-radius: 10px;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 10px;
 }
