--- a/app/src/app/licit/timer/timer.component.html
+++ b/app/src/app/licit/timer/timer.component.html
@@ -1,4 +1,4 @@
-<div class="timer">
+<div class="timer" id="timer">
     <p>{{ minute | number:'2.0-0' }}</p>
     <p>:</p>
     <p>{{ second | number:'2.0-0' }}</p>
