--- a/app/src/app/licit/highest-bid/highest-bid.component.css
+++ b/app/src/app/licit/highest-bid/highest-bid.component.css
@@ -1,8 +1,8 @@
 .price {
 	text-align: center;
-    color: black;
-    border: 1px dashed black;
-    border-radius: 25px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
     width: fit-content;
     margin: auto;
     margin-top: 20px;
