--- a/app/src/app/licit/raise-bid/raise-bid.component.css
+++ b/app/src/app/licit/raise-bid/raise-bid.component.css
@@ -1,8 +1,11 @@
 .licit-amount {
-	border: 1px dashed black;
-	border-radius: 25px;
+	border-radius: 10px;
 	width: fit-content;
 	padding: 10px;
-	font-size: 20px;
+	margin: 10px;
+	margin-left: 20px;
+	font-size: 19px;
     font-weight: bold;
+	color: white;
+	background-color: hsla(0, 0%, 0%, 0.5);
 }
