--- a/app/src/app/licit/winner/winner.component.html
+++ b/app/src/app/licit/winner/winner.component.html
@@ -1,5 +1,7 @@
 <div id="winner">
-    <div><h1>≡ƒÅå Winner, winner, chicken dinner ≡ƒÅå</h1></div>
-    <div><h2>≡ƒÄë {{ winner }} ≡ƒÄë</h2></div>
-    <div><h3>≡ƒÆ▓ {{ price }} ≡ƒÆ▓</h3></div>
+    <div id="winner-content">
+        <div><h1>The winner is:</h1></div>
+        <div><h2>🎉 {{ winner }} 🎉</h2></div>
+        <div><h3>Now you must pay {{ price }}$</h3></div>
+    </div>
 </div>
